# tmt

./: challenge_8_explanation.md  pyproject.toml
config/settings/: base.py
interview/inventory/: admin.py  tests.py  views.py
interview/order/: urls.py  views.py
interview/profiles/: models.py
interview/profiles/migrations/: 0001_initial.py
